<?xml version="1.0" encoding="utf-8"?>


<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.devbox.stockhawkrewrite.view.MainActivity">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/stock_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:paddingBottom="@dimen/recycler_view_padding_bottom"
        android:clipToPadding="false"
        android:background="@color/recycler_view_background"
        />

    <TextView
        android:id="@+id/stock_empty_list_message"
        style="@style/EmptyStockListMessage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/message_empty_stock_list"
        />


    <android.support.design.widget.FloatingActionButton
        android:id="@+id/add_stock_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:src="@android:drawable/ic_input_add"
        style="@style/MyFabTheme"
        />

</android.support.constraint.ConstraintLayout>
