<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.AlertDialogLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <android.support.design.widget.TextInputLayout
        android:id="@+id/dialog_text_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dialog_text_input_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >

        <android.support.design.widget.TextInputEditText
            android:id="@+id/dialog_input_stock_ticker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/dialog_stock_entry_hint"
            android:inputType="textFilter|textCapCharacters"
            />

    </android.support.design.widget.TextInputLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">


        <Button
            android:id="@+id/dialog_ok_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@id/dialog_cancel_button"
            android:text="@string/dialog_ok_button"
            style="@style/Widget.AppCompat.Button.Colored"
            />

        <Button
            android:id="@+id/dialog_cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="false"
            android:text="@string/dialog_cancel_button"
            style="@style/Widget.AppCompat.Button.Colored"

            />

    </RelativeLayout>


</android.support.v7.widget.AlertDialogLayout>