<resources>
    <string name="app_name">StockHawkRewrite</string>

    <!--buttons-->
    <string name="btn_add_stock">Add Stock</string>

    <!--details fields-->
    <string name="detail_name">%1$s</string>
    <string name="detail_ticker">Stock Symbol: %1$s</string>
    <string name="detail_price">Stock Price: %1$.2f</string>
    <string name="detail_ask">Ask: %1$.2f</string>
    <string name="detail_bid">Bid: %1$.2f</string>
    <string name="detail_percent_change">Change(%%): %1$.2f</string>
    <string name="detail_currency_change">Change(\u0024): %1$.2f</string>
    <string name="detail_year_high">Yearh High: %1$.2f</string>
    <string name="detail_year_low">Yearh Low: %1$.2f</string>
    <string name="detail_chart_label">"%1$s price"</string>
    <string name="dialog_stock_entry_hint">Enter stock ticker</string>
    <string name="dialog_ok_button">OK</string>
    <string name="dialog_cancel_button">Cancel</string>
    <string name="dialog_title">Add A Stock</string>
    <string name="detail_title">Details for %1$s</string>
    <string name="detail_chart_description">Price over time</string>
    <string name="refresh_stock_data">Refresh Data</string>

    <string name="message_update_complete">Update complete</string>
    <string name="message_empty_stock_list">You have no stocks added at this time.</string>

    <string name="format_price">%1$.2f</string>

</resources>
